# wit-bindgen

crates/core/src/: async_.rs
crates/guest-rust/src/rt/: async_support.rs
crates/guest-rust/src/rt/async_support/: future_support.rs  stream_support.rs  subtask.rs  unit_stream.rs  waitable.rs  waitable_set.rs
crates/rust/src/: interface.rs
examples/wcjs-no-jspi-cli-smoke/: Cargo.toml  README.md  run.sh
examples/wcjs-no-jspi-cli-smoke/src/: lib.rs
tests/runtime-async/async/future-write-then-read-remote/: runner.rs
